--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     // ga('send', 'pageview');
   </script>
   <!-- SwellRT -->
-  <script src="//demo.swellrt.org/swellrt.js"></script>
+  <script src="https://demo.swellrt.org/swellrt.js"></script>
 
   <% if (webpackConfig.metadata.isDevServer && webpackConfig.metadata.HMR !== true) { %>
   <!-- Webpack Dev Server reload -->
